# Glad2

./: .gitignore  CMakeLists.txt  README.md
include/glad/: gl.h
